<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".op_activities.MainActivity"
    android:id="@+id/drawerLayout"
    >
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.AppCompat.Dark"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="#ffffff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorAccent"
                style="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_scrollFlags="scroll|enterAlways"
                />

        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <LinearLayout
                android:id="@+id/llodin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/txtheadtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/please_choose_your_favourite_social_media"
                    android:textSize="30sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textStyle="italic"
                    />
                <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:context=".MainActivity"
                        android:orientation="vertical"
                        >
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:id="@+id/rl1"
                            >
                            <ImageView
                                android:id="@+id/imgfb"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/fb"
                                android:contentDescription="@string/fb"
                                />
                            <ImageView
                                android:id="@+id/imginsta"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/insta"
                                android:layout_toEndOf="@id/imgfb"
                                android:layout_marginStart="40dp"
                                android:contentDescription="@string/insta" />

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:id="@+id/rl2"
                            >
                            <ImageView
                                android:id="@+id/imglinkd"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/linked"
                                android:contentDescription="@string/linkDin" />
                            <ImageView
                                android:id="@+id/imggit"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/git"
                                android:layout_toEndOf="@id/imglinkd"
                                android:layout_marginStart="40dp"
                                android:contentDescription="@string/insta" />

                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:id="@+id/rl3"
                            >
                            <ImageView
                                android:id="@+id/imgredit"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/red"
                                android:contentDescription="@string/fb" />
                            <ImageView
                                android:id="@+id/imgpint"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/pint"
                                android:layout_toEndOf="@id/imgredit"
                                android:layout_marginStart="40dp"
                                android:contentDescription="@string/insta" />



                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:id="@+id/rl4"
                            >
                            <ImageView
                                android:id="@+id/imgtumb"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/tt"
                                android:contentDescription="@string/fb" />
                            <ImageView
                                android:id="@+id/imgtwitter"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/twitt"
                                android:layout_toEndOf="@id/imgtumb"
                                android:layout_marginStart="40dp"
                                android:contentDescription="@string/insta" />



                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="UselessParent"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="50dp"
                            android:id="@+id/rl5"
                            android:layout_marginBottom="40dp"
                            >
                            <ImageView
                                android:id="@+id/imgfod"
                                android:layout_width="120dp"
                                android:layout_height="120dp"
                                android:src="@drawable/fd"
                                android:contentDescription="@string/fb" />





                        </RelativeLayout>
=

                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:menu="@menu/menu_drawer"
        android:layout_gravity="start"
        android:layout_marginTop="56dp"
        />

</androidx.drawerlayout.widget.DrawerLayout>





































<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/please_choose_your_favourite_social_media"
    android:textSize="30sp"
    android:textColor="#000000"
    android:textStyle="italic"
    />
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/rl1"
        >
        <ImageView
            android:id="@+id/imgfb"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/fb"
            android:contentDescription="@string/fb" />
        <ImageView
            android:id="@+id/imginsta"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/insta"
            android:layout_toEndOf="@id/imgfb"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/insta" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/rl2"
        >
        <ImageView
            android:id="@+id/imglinkd"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/linkdin"
            android:contentDescription="@string/linkDin" />
        <ImageView
            android:id="@+id/imggit"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/github"
            android:layout_toEndOf="@id/imglinkd"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/insta" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/rl3"
        >
        <ImageView
            android:id="@+id/imgredit"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/redit"
            android:contentDescription="@string/fb" />
        <ImageView
            android:id="@+id/imgpint"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/pintrest"
            android:layout_toEndOf="@id/imgredit"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/insta" />



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/rl4"
        >
        <ImageView
            android:id="@+id/imgtumb"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/tumblr"
            android:contentDescription="@string/fb" />
        <ImageView
            android:id="@+id/imgtwitter"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/twitter"
            android:layout_toEndOf="@id/imgtumb"
            android:layout_marginStart="40dp"
            android:contentDescription="@string/insta" />



    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:id="@+id/rl5"
        android:layout_marginBottom="40dp"
        >
        <ImageView
            android:id="@+id/imgfod"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/fod"
            android:contentDescription="@string/fb" />




    </RelativeLayout>




</LinearLayout>
</ScrollView>
</LinearLayout>-->
